Изменил настройки swagger, добавил username
